<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FragmentForShopping</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_simple_fragment">SimpleFragmentActivity</string>
    <string name="product_details">Urun Bilgileri</string>
    <string name="product_buy">Sepete Ekle</string>
    <string name="product_name_placeholder">Product name</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="urun_id_text_view">Ürün ID</string>
    <string name="urun_id_edit_view">urunID</string>
    <string name="urun_adi_text_view">Ürün Adi</string>
    <string name="urun_adi_edit_view">urunadi</string>
    <string name="urun_fiyati_text_view">Ürün Fiyati</string>
    <string name="urun_fiyati_edit_view">fiyattttttt</string>
    <string name="urun_adedi_text_view">Ürün Adedi</string>
    <string name="urun_adedi_edit_view">1</string>
    <string name="title_activity_product2">Product2Activity</string>
    <string name="title_activity_basket">BasketActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="sehir_text_view">Şehir    :</string>
    <string name="sehir_edit_view">İstanbul</string>
    <string name="semt_text_view">Semt     :</string>
    <string name="semt_edit_view">Pendik</string>
    <string name="adres_text_view">Adres     :</string>
    <string name="adres_edit_view">mal meydanı</string>

</resources>
